lib/kitt/tmpl/apps/kyso-ui/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: __APP__-svc
  namespace: __NAMESPACE__
  labels:
    app.kubernetes.io/name: __APP__
subsets:
- addresses:
  - ip: __SERVER_ADDR__
  ports:
  - port: __SERVER_PORT__
    protocol: TCP
