lib/kitt/tmpl/apps/kyso-ui/endpoint_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyso-ui-svc
  namespace: __NAMESPACE__
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: __SERVER_PORT__
